[gd_scene load_steps=11 format=3 uid="uid://cvrisvbi4sm1c"]

[ext_resource type="Texture2D" uid="uid://s2vllouooxun" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_dlkrs"]
[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_ds8hd"]
[ext_resource type="Texture2D" uid="uid://c3uhn1vvu2jtj" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_87v4e"]
[ext_resource type="Texture2D" uid="uid://dggeqma22obbe" path="res://addons/Tiny Swords/Resources/Resources/G_Idle_(NoShadow).png" id="4_ile71"]

[sub_resource type="SystemFont" id="SystemFont_b8uua"]
font_names = PackedStringArray("Impact")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_ujdju"]
font = SubResource("SystemFont_b8uua")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tepiv"]
texture = ExtResource("1_dlkrs")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5aia"]
atlas = ExtResource("3_87v4e")
region = Rect2(40, 48, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_431hd"]
atlas = ExtResource("4_ile71")
region = Rect2(40, 48, 56, 56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1e2xg"]
bg_color = Color(0.396078, 0.556863, 0.203922, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ds8hd")

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 19.0
offset_right = 20.0
offset_bottom = 45.0
grow_horizontal = 2
text = "TIME"
label_settings = SubResource("LabelSettings_ujdju")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -335.0
offset_top = 27.0
offset_right = -23.0
offset_bottom = 125.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_tepiv")

[node name="MeatLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -32.0
offset_right = 9.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "MEAT"
label_settings = SubResource("LabelSettings_ujdju")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -33.0
offset_right = 139.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "GOLD"
label_settings = SubResource("LabelSettings_ujdju")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -47.0
offset_right = -6.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_g5aia")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -45.0
offset_right = 127.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_431hd")

[node name="LevelPanel" type="Panel" parent="."]
offset_left = 21.0
offset_top = 27.0
offset_right = 214.0
offset_bottom = 125.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tepiv")

[node name="LevelLabel" type="Label" parent="LevelPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -33.0
offset_right = -18.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "LVL"
label_settings = SubResource("LabelSettings_ujdju")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="LevelPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -31.0
offset_right = 60.5
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_1e2xg")
max_value = 1.0
value = 0.5
show_percentage = false
